[tool.poetry]
name = "vball-tracker"
version = "0.1.0"
description = "Volleyball Stat Tracker"
authors = ["Jerry Sun"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
numpy = "^2.0.1"
pandas = "^2.2.2"
opencv-python = "^4.10.0.84"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
